--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   chess_vectors_flutter: ^1.1.0
   flutter_riverpod: ^2.5.1
+  socket_io_client: ^2.0.3+1
 
 dev_dependencies:
   flutter_test:
