--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   chess_vectors_flutter: ^1.1.0
   flutter_riverpod: ^2.5.1
   socket_io_client: ^2.0.3+1
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
